# ALSE_2420

Sensores/: CMakeLists.txt  delete_db.cpp  sensores_db.cpp
Taller_struct/: complex.h
puntos/: punto.cpp  punto.h
